fixed some warnings in nilTest and PairTest #38